--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>CS460-Project</title>
+    <title>Website 1</title>
 	
     <style>
 	    .box{
 		padding-top: 15px;    
-	    	width:20em;
-		height:12em;
+	    	width:20%;
+		height:10%;
 	    	border-style:solid;
 	    	border-width:0.5em;
 		text-align:center;
@@ -28,22 +28,20 @@
 
 <body>
 	
-<h2>CS460 project website</h2>
+<h2>Website 1</h2>
 <ul>
 	<li><h3>Student:Haraprasad Dhal(1811074 SPS-18)</li>
-	<li><h3>Student:Ravi Prakash Singh(1811122 SPS-18)</li>
-	<li><h3>Instructor:Dr. Subhankar Mishra</li>	
 </ul>	
 <div>	
 	
 <div class="box">
- <a href="project_proposal.html"><h2>Project Proposal</a>
+ <a href="https://1raviprakash.github.io/21cs460_group19/"><h2>CS460 ML project</a>
 	
 </div>	
 	
 
 <div class="box">
- <a href="midsem_report.html"><h2>Report up to Midsem</a>
+ <a href="computational_physics_p452.html"><h2>Computational physics P452</a>
 	
 </div>	
 	
