--- a/eigenvalue_problem.html
+++ b/eigenvalue_problem.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="utf-8" />
     <title>Eigen Value Problem</title>
-	
+    <script type="text/javascript" id="MathJax-script" async
+  	src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+	</script>
     	    
 </head>
 
@@ -12,6 +14,13 @@
 
 
 <body>
+	<h1>Eigen value problem</h1>
+	<div>
+	<h2>Power Iteration/Von Mises Method</h2>
+	<ul>
+		<li>A $$ \belongs R^{d\timesd}$$ is Diagonalizable.</li>
+	</ul>	
+	</div>
 </body>
   
 </html>  
