--- a/eigenvalue_problem.html
+++ b/eigenvalue_problem.html
@@ -18,7 +18,7 @@
 	<div>
 	<h2>Power Iteration/Von Mises Method</h2>
 	<ul>
-		<li>A $$ \belongs R^{d\timesd}$$ is Diagonalizable.</li>
+		<li>A $$ \in R^{dxd}$$ is Diagonalizable.</li>
 	</ul>	
 	</div>
 </body>
