--- a/eigenvalue_problem.html
+++ b/eigenvalue_problem.html
@@ -4,7 +4,17 @@
 <head>
     <meta charset="utf-8" />
     <title>Eigen Value Problem</title>
-    <script type="text/javascript" id="MathJax-script" async
+	<script>
+	MathJax = {
+  	tex: {
+    	inlineMath: [['$', '$'], ['\\(', '\\)']]
+  	},
+  	svg: {
+    	fontCache: 'global'
+  	}
+	};
+	</script>
+    	<script type="text/javascript" id="MathJax-script" async
   	src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
 	</script>
     	    
