--- a/eigenvalue_problem.html
+++ b/eigenvalue_problem.html
@@ -28,7 +28,8 @@
 	<div>
 	<h2>Power Iteration/Von Mises Method</h2>
 	<ul>
-		<li>A $ \in R^{dxd}$ is Diagonalizable.</li>
+		<li>A $ \in R^{d\timesd}$ is Diagonalizable.</li>
+		<li> Let $\lambda_1,\lambda_2,.....,\lambda_d$ be d eigenvalues of A and Let $v_1,v_2,......,v_d$ be Corresponding eigenvectors.
 	</ul>	
 	</div>
 </body>
