--- a/eigenvalue_problem.html
+++ b/eigenvalue_problem.html
@@ -28,8 +28,12 @@
 	<div>
 	<h2>Power Iteration/Von Mises Method</h2>
 	<ul>
-		<li>A $ \in R^{d\timesd}$ is Diagonalizable.</li>
+		<li>A $ \in R^{d\times d}$ is Diagonalizable.</li>
 		<li> Let $\lambda_1,\lambda_2,.....,\lambda_d$ be d eigenvalues of A and Let $v_1,v_2,......,v_d$ be Corresponding eigenvectors.
+		<li> Let $b_0=c_1v_1+c_2v_2+.......+c_dv_d$  such that $c_1 \neq 0$.</li>
+		<li>$A^kb_0=c_1A^kv_1+c_2A^kv_2+.......+c_dA^kv_d$ <br>
+			$=c_1\lambda_1^kv_1+c_2\lambda_2^kv_2+.......+c_d\lambda_d^kv_d$
+		</li>
 	</ul>	
 	</div>
 </body>
