--- a/eigenvalue_problem.html
+++ b/eigenvalue_problem.html
@@ -41,7 +41,7 @@
 		<li>$b_k=\frac{A^kb_0}{||A^kb_0||}$ converges to eigen vector of a corresponding to maximum eigen value.<li>
 		<li> $\mu_k=\frac{b_k^TAb_k}{b_k^Tb_k}$ converges to dominant eigen value. </li>
 	</ul>	
-		<div>
+		<div style="background-color:LightGrey;">
 			<ol>
 				<li>Produce random vector $b_0$</li>
 				<li>While(k$\lt$NO_of_loops)</li>
