--- a/eigenvalue_problem.html
+++ b/eigenvalue_problem.html
@@ -45,9 +45,9 @@
 			<ol>
 				<li>Produce random vector $b_0$</li>
 				<li>While(k$\lt$NO_of_loops)</li>
-				<li>	$b_{k+1}=Ab_k$</li>
-				<li>	$\mu_k=\frac{b_k^Tb_{k+1}}{b_k^Tb_k}$</li>
-				<li>	$b_k=\frac{b_{k+1}}{||b_{k+1}||}$</li>
+				<li>&nbsp	$b_{k+1}=Ab_k$</li>
+				<li>&nbsp	$\mu_k=\frac{b_k^Tb_{k+1}}{b_k^Tb_k}$</li>
+				<li>&nbsp	$b_k=\frac{b_{k+1}}{||b_{k+1}||}$</li>
 				<li>Return $\mu_k$(largest eigen value) ,$b_k$(corresponding eigen vector).</li>
 			</ol>
 		</div>	
