--- a/eigenvalue_problem.html
+++ b/eigenvalue_problem.html
@@ -24,8 +24,8 @@
 
 
 <body>
-	<div style="position:fixed;border-left-style:solid;background-color:LightBlue;">
-		<ul>
+	<div style="position:fixed;border-bottom-style:solid;background-color:LightBlue;">
+		<ul style="list-style-type:none;padding:0;margin:0;">
 			<li style="dislay:inline;"><a href=""> Website1(Home)</a></li>
 			<li style="dislay:inline;"><a href=""> Computational Physics(P452)</a></li>
 			<li style="dislay:inline;"><a href=""> a</a></li>
