--- a/eigenvalue_problem.html
+++ b/eigenvalue_problem.html
@@ -25,11 +25,11 @@
 
 <body>
 	<div style="position:fixed;border-bottom-style:solid;background-color:LightBlue;">
-		<ul style="list-style-type:none;padding:0;margin:0;">
-			<li style="dislay:inline;"><a href=""> Website1(Home)</a></li>
-			<li style="dislay:inline;"><a href=""> Computational Physics(P452)</a></li>
-			<li style="dislay:inline;"><a href=""> a</a></li>
-			<li style="dislay:inline;"><a href=""> b</a></li>
+		<ul style="padding:0;margin:0;">
+			<li style="display:inline;"><a href=""> Website1(Home)</a></li>
+			<li style="display:inline;"><a href=""> Computational Physics(P452)</a></li>
+			<li style="display:inline;"><a href=""> a</a></li>
+			<li style="display:inline;"><a href=""> b</a></li>
 		</ul>
 	</div>
 	<h1>Eigen value problem</h1>
