--- a/eigenvalue_problem.html
+++ b/eigenvalue_problem.html
@@ -25,7 +25,7 @@
 
 <body>
 	<div style="position:fixed;border-bottom-style:solid;background-color:LightBlue;">
-		<ul style="padding:0;margin:0;">
+		<ul style="">
 			<li style="display:inline;"><a href=""> Website1(Home)</a></li>
 			<li style="display:inline;"><a href=""> Computational Physics(P452)</a></li>
 			<li style="display:inline;"><a href=""> a</a></li>
