--- a/eigenvalue_problem.html
+++ b/eigenvalue_problem.html
@@ -24,8 +24,8 @@
 
 
 <body>
-	<div style="position:fixed;border-bottom-style:solid;background-color:LightBlue;">
-		<ul style="">
+	<div style="border-bottom-style:solid;background-color:LightBlue;">
+		<ul>
 			<li style="display:inline;"><a href=""> Website1(Home)</a></li>
 			<li style="display:inline;"><a href=""> Computational Physics(P452)</a></li>
 			<li style="display:inline;"><a href=""> a</a></li>
