--- a/eigenvalue_problem.html
+++ b/eigenvalue_problem.html
@@ -28,7 +28,7 @@
 		<ul>
 			<li style="display:inline;"><a href=""> Website1(Home)</a></li>
 			<li style="display:inline;"><a href=""> Computational Physics(P452)</a></li>
-			<li style="display:inline;"><a href=""> a</a></li>
+			<li style="display:inline;"><a href=""> Open lab</a></li>
 			<li style="display:inline;"><a href=""> b</a></li>
 		</ul>
 	</div>
