--- a/eigenvalue_problem.html
+++ b/eigenvalue_problem.html
@@ -25,10 +25,10 @@
 
 <body>
 	<div style="border-bottom-style:solid;background-color:LightBlue;">
-		<ul>
-			<li style="display:inline;"><a href=""> Website1(Home)</a></li>
-			<li style="display:inline;"><a href=""> Computational Physics(P452)</a></li>
-			<li style="display:inline;"><a href=""> Open lab</a></li>
+		<ul style="list-style-type:square">
+			<li style="display:inline;"><a href="index.html"> Website1(Home)</a></li>
+			<li style="display:inline;"><a href="computational_physics_p452.html"> Computational Physics(P452)</a></li>
+			<li style="display:inline;"><a href="openlab_sem8.html"> Open lab</a></li>
 			<li style="display:inline;"><a href=""> b</a></li>
 		</ul>
 	</div>
