--- a/openlab_sem8.html
+++ b/openlab_sem8.html
@@ -25,9 +25,9 @@
 
 <body>
 	<div style="border-bottom-style:solid;background-color:LightBlue;">
-		<ul>
-			<li style="display:inline;"><a href=""> Website1(Home)</a></li>
-			<li style="display:inline;"><a href=""> Computational Physics(P452)</a></li>
+		<ul style="list-style-type:square">
+			<li style="display:inline;"><a href="index.html"> Website1(Home)</a></li>
+			<li style="display:inline;"><a href="computational_physics_p452.html"> Computational Physics(P452)</a></li>
 			<li style="display:inline;"><a href=""> a</a></li>
 			<li style="display:inline;"><a href=""> b</a></li>
 		</ul>
