--- a/openlab_sem8.html
+++ b/openlab_sem8.html
@@ -26,10 +26,10 @@
 <body>
 	<div style="border-bottom-style:solid;background-color:LightBlue;">
 		<ul style="list-style-type:square">
-			<li style="display:inline;"><a href="index.html"> Website1(Home)</a></li>
-			<li style="display:inline;"><a href="computational_physics_p452.html"> Computational Physics(P452)</a></li>
-			<li style="display:inline;"><a href=""> a</a></li>
-			<li style="display:inline;"><a href=""> b</a></li>
+			<li style="display:inline;"><a href="index.html"> Website1(Home)&nbsp</a></li>
+			<li style="display:inline;"><a href="computational_physics_p452.html"> Computational Physics(P452)&nbsp</a></li>
+			<li style="display:inline;"><a href=""> a&nbsp</a></li>
+			<li style="display:inline;"><a href=""> b&nbsp</a></li>
 		</ul>
 	</div>
   <h1>Open Lab<h1>
